# patchprophet

./: README.md
.github/workflows/: ci.yml
backend/: LICENSE.txt  README.md  pyproject.toml
backend/src/patchprophet/: __about__.py  main.py
backend/tests/: __init__.py
ui/: package-lock.json
